--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <div>
             <h5>
                 <strong>email:</strong>
-                " {{contact.email}}"
+                {{contact.email}}
             </h5>
             <h5>
                 <strong>country:</strong>
-                " {{contact.country}}"
+                {{contact.country}}
             </h5>
         </div>
     </body>
