--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <body>
         <div>
             <h5>
-                <strong>email:</strong>
-                {{contact.email}}
+                <strong>email:</strong>{{contact.email}}
             </h5>
             <h5>
-                <strong>country:</strong>
-                {{contact.country}}
+                <strong>country:</strong>{{contact.country}}
             </h5>
         </div>
     </body>
