test sample links

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <strong>country:</strong>{{contact.country}}
             </h5>
         </div>
+        <div id="links"></div>
         <div id="img"></div>
     </body>
 </html>
